src/test/deca/syntax/invalid/test_lex/hello_world/include_newline.decah
// Description:
//    Entre le incldue et le nom du fichier, il ne peut y avoir que des
//    espaces normaux: pas de retour a la ligne.
//
//    [Lexicographie], Inclusion de fichier, p55
//    INCLUDE = '#include' (' ')* '"' FILENAME '"'
//
// Resultats:
//    Erreur dans le lexeur ligne 14:9: pas de token.
//
// Historique:
//    cree le 05/01/2022

#include
"hello_world.decah"